--- a/templates/category/index.html.twig
+++ b/templates/category/index.html.twig
@@ -13,11 +13,12 @@
 
            
              <div class="col-md-3 text-center">
-              
-                <img src="/uploads/{{ product.image }}" class="img-fluid"> 
-                <strong>{{ product.name }}</strong>
-                <span class="d-block">{{ product.pricewt }}</span>
-              
+                <a href="{{ path('app_product', { slug:product.slug }) }}" class="text-decoration-none">
+                    <img src="/uploads/{{ product.image }}" class="img-fluid"> 
+                    <span class="d-block fw-bold text-black">{{ product.name }}</span>
+                </a>
+                <span class="d-block">{{ product.pricewt|price }}</span>
+                
               </div>
 
             {% endfor %}
