--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -7,16 +7,20 @@
         
 
         <div class="row">
-            
-            
-             <div class="col-md-6 text-center">
-               
+             <div class="col-md-6">      
               <img src="/uploads/{{ product.image }}" class="img-fluid" alt="{{ product.name }}">
             </div>
 
-             <div class="col-md-6 text-center">INFO 2</div>
+             <div class="col-md-6">
+                <small><i><a href="{{ path('app_category', { slug:product.category.slug }) }}">{{ product.category.name }}</a> > {{ product.name }}</i></small>
+                <h1>{{ product.name }}</h1>
+                <span class="d-block mb-3">{{ product.pricewt | price }}<span>
+                {{ product.description | raw }}
+                <button class="btn btn-success w-100 mt-3">Ajouter au panier</button>
+                
+             </div>
 
-            {{ dump(product) }}
+           
            
             
         </div>
