--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -1,20 +1,29 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello CartController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <div class="container my-5">
+        <h1>Mon Panier</h1>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>C:/xampp/htdocs/laboutiquefrancaise/src/Controller/CartController.php</code></li>
-        <li>Your template at <code>C:/xampp/htdocs/laboutiquefrancaise/templates/cart/index.html.twig</code></li>
-    </ul>
-</div>
+        <div class="row">
+
+            <div class="col-md-8">
+                Liste de mes produits
+            </div>
+
+            <div class="col-md-4">
+                Récap de mon panier, prix, bouton commander
+            </div>
+
+        </div>    
+
+
+
+        
+
+    </div>
+
 {% endblock %}
+
+
