Création du Panier et de la classe Cart

--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -10,6 +10,7 @@
 
             <div class="col-md-8">
                 Liste de mes produits
+                {{dump(cart)}}
             </div>
 
             <div class="col-md-4">
