--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -9,12 +9,43 @@
         <div class="row">
 
             <div class="col-md-8">
-                Liste de mes produits
-                {{dump(cart)}}
+                {% for product in cart %}
+                <div class="row mt-2">   
+                    <div class="col-md-2">
+                        <img src="/uploads/{{ product.objet.image }}" class="img-fluid" alt="{{ product.objet.name }}">
+                    </div>
+                    <div class="col-md-6">
+                        <strong>{{ product.objet.name }}</strong>
+                        <span class="d-block small">Prix unitaire:{{ product.objet.pricewt | price }}</span>
+                    </div>
+                    <div class="col-md-2 text-right">
+                     <a href="{{ path('app_cart_decrease', { id : product.objet.id}) }}"> -  </a><span class="badge text-bg-secondary">x {{ product.qty }}</span> <a href="{{ path('app_cart_add', { id : product.objet.id}) }}"> + </a>
+                    </div>
+                    <div class="col-md-2">
+                       <strong>{{ (product.qty * product.objet.pricewt) | price }}</strong> 
+                    </div>
+                </div>    
+                {% endfor %}    
+                
+                
+
+
             </div>
 
             <div class="col-md-4">
-                Récap de mon panier, prix, bouton commander
+                <div class="bg-light p-3">
+                    <div class="d-flex justify-content-between">
+                        <span class="fw-bold">Total produit : </span>
+                        <span>{{ fullCartQuantity }}</span>
+                    </div>
+                    <div class="d-flex justify-content-between mt-3">
+                        <span class="fw-bold">Prix total T.T.C.: </span>
+                        <span>{{ totalWt | price }}</span>
+                    </div>
+                    <div>
+                        <a href="" class="btn btn-success w-100 mt-3">Commander</a>
+                    </div>
+                </div>
             </div>
 
         </div>    
